--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="form-group">
             <label for="price">Price:</label>
-            <input type="number" step="0.01" id="price" placeholder="Price" required>
+            <input type="number" min="0" step="0.01" id="price" placeholder="Price" required>
         </div>
         <button type="submit" id="save-btn">Save</button>
     </form>
@@ -52,7 +52,9 @@
         <th>Actions</th>
     </tr>
     </thead>
-    <tbody></tbody>
+    <tbody>
+
+    </tbody>
 </table>
 </body>
 </html>
