--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,52 +9,55 @@
     <script src="app.js" defer></script>
 </head>
 <body>
-<h1>Library Management</h1>
+<main>
+    <h1>Library Inventory</h1>
 
-<div id="book-form">
-    <h2>Add/Update Book</h2>
-    <form id="bookForm">
-        <input type="hidden" id="bookId">
-        <div class="form-group">
-            <label for="title">Title:</label>
-            <input type="text" id="title" placeholder="Title" required>
-        </div>
-        <div class="form-group">
-            <label for="author">Author:</label>
-            <input type="text" id="author" placeholder="Author" required>
-        </div>
-        <div class="form-group">
-            <label for="isbn">ISBN:</label>
-            <input type="text" id="isbn" placeholder="ISBN" required>
-        </div>
-        <div class="form-group">
-            <label for="publishedDate">Published Date:</label>
-            <input type="date" id="publishedDate" placeholder="Published Date" required>
-        </div>
-        <div class="form-group">
-            <label for="price">Price:</label>
-            <input type="number" min="0" step="0.01" id="price" placeholder="Price" required>
-        </div>
-        <button type="submit" id="save-btn">Save</button>
-    </form>
-</div>
+    <fieldset id="book-form">
+        <legend>Add/Update a Book</legend>
+        <form id="bookForm">
+            <input type="hidden" id="bookId">
+            <div class="form-group">
+                <label for="title">Title:</label>
+                <input type="text" id="title" placeholder="e.g. Moby-Dick" required>
+            </div>
+            <div class="form-group">
+                <label for="author">Author:</label>
+                <input type="text" id="author" placeholder="e.g. Herman Melville" required>
+            </div>
+            <div class="form-group">
+                <label for="isbn">ISBN:</label>
+                <input type="text" id="isbn" placeholder="e.g. 111111111" required>
+            </div>
+            <div class="form-group">
+                <label for="publishedDate">Published Date:</label>
+                <input type="date" id="publishedDate" placeholder="Published Date" required>
+            </div>
+            <div class="form-group">
+                <label for="price">Price:</label>
+                <input type="number" min="0" step="0.01" id="price" placeholder="€" required>
+            </div>
+            <button type="submit" id="save-btn">Save</button>
+        </form>
+    </fieldset>
 
-<h2>Books List</h2>
-<table id="booksTable">
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Title</th>
-        <th>Author</th>
-        <th>ISBN</th>
-        <th>Published Date</th>
-        <th>Price (€)</th>
-        <th>Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-
-    </tbody>
-</table>
+    <fieldset id="book-list">
+        <legend>Books List</legend>
+        <table id="booksTable">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Author</th>
+                <th>ISBN</th>
+                <th>Published Date</th>
+                <th>Price (€)</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </fieldset>
+</main>
 </body>
 </html>
